[project]
name = "ha-ai-tasker"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Sendzik",email = "daniel@sendzik.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai (>=1.107.0,<2.0.0)",
    "openai-agents (>=0.2.11,<0.3.0)",
    "matrix-nio>=0.24.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
